--- a/subjects.html
+++ b/subjects.html
@@ -6,7 +6,7 @@
   </head>
   <hr size="3" noshade>
   <body>
-    <img src="C:\Users\Govinda\OneDrive\Desktop\Web Development\HTML Personal Sites\Hatake Kakashi.jpg" alt="Anime">
+    <img src="Hatake Kakashi.jpg" alt="Anime">
 <h1><em>SIDDHANT KAUL</em></h1>
 <p>
   <em><strong>I AM A STUDENT</strong></em>
